--- a/index.html
+++ b/index.html
@@ -1,30 +1,88 @@
-<!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
-<title>たいとる</title>
-<link rel="stylesheet" href="index.css">
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MコースがMコースたる所以</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
-
 <body>
-  <div class=header>
-    <h1>たいとる</h1>
-    <div>せつめいせつめい</div>
-  </div>
-  <div class=main>
-    <div>
-      <h2>さぶたいとる１</h2>
-      <div>
-        ほんぶん１
-      </div>
-    </div>
+  <header>
+    <h1>必見！ズバリMコースとは</h1>
+    <p>どうも、3M-05 稲葉有煌です。</p>
+  </header>
 
-    <div>
-      <h2>さぶたいとる２</h2>
-      <div>
-        ほんぶん２
-      </div>
+  <section class="gallery">
+    <h2>Mコース、やっぱり夢がありますよね！</h2>
+<p>何と言っても<strong>　［機械］　</strong>日本男児全ての憧れです。</p>
+<p>それは過言だとしても、やはり一番の魅力はそこでしょう</p>
+<p>かく言う私もそこに惹かれました。</p>
+　<p>そこでここでは、Mコースに関して</p>
+<ol>
+  <a href="#section2"><li>座学内容</li></a>
+  <a href="#section3"><li>実習内容</li></a>
+  <a href="#section4"><li>適した性格</li></a>
+
+</ol>
+<p>を 私の主観のみで後述させていただきます。</p>
+
+<h2 id="section2">座学内容</h2>
+<p>図法等を理解したうえで、用紙への製図や</p>
+<p>3DCADを用いた製図が主に印象に残っています。</p>
+<p>高専生であれば、有料のCADソフトが無料で使えるため</p>
+<p>講義内のみならず、自主学習にも活かすことができます。</p>
+<p>ですが、やはり"専門的で難しいんじゃないか"</p>
+<p>"自分にわかるのか"と座学には不安がつきものだと思います。</p>
+<p>得手不得手も関与しますが、実際私は製図等は大の苦手でしたね</p>
+
+<img src="pang.png" alt="風景1" class="right-img">
+<p><strong>ですが</strong>、それらを完璧にマスターする必要があるかと言われると</p>  
+<p>そうではありません。無論、単位のため成績は必要になりますが</p>
+<p>高専卒業後、それらをどこまで使うことになるかが関係してきます</p>
+<p>というのも、高専卒業生の話をいくつか聞く限り、それらを駆使する</p>
+<p>ことはほとんどないとおっしゃる方が大多数を占めます。</p>
+<p>しかし、決して座学が無駄というわけではなく</p>
+<p>就職先や進学先によって、求められるものが異なることを</p>
+<p>念頭に置いたうえで、座学で思いつめすぎる必要はないと私は考えます。</p>
+
+ 
+<h2 id="section3">実習内容</h2>
+<p>皆さん一番気になるところだと思います</p>
+<p>今現在私が取り組んでいるのは空気エンジンの加工、分解、組み立てです。</p>
+<p>旋盤やボール盤、フライス盤等の大型機械を駆使して、加工材の穴あけや切削加工を行う。</p>
+<p>また、タップややすり等小さな道具で表面や内部の形を整える加工をも行う。</p>
+<p>～～盤といっても、わからない人のほうが多数を占めると思われますので、下部に代表的な</p>
+<p>旋盤の参考画像を添付しておきます。</p>
+<p>やはり機械を扱うとなると、危険が常に伴い、それなりな緊張感があります。</p>
+<p>しかし、それを加味しても機械による金属加工には、ほかにはない楽しさがあり、</p>
+<p>完成時には無類の達成感を感じられます。</p>
+<p>感想に個人差はあれど、これが高専を象徴するものであり、</p>
+<p>Mコース唯一無二の長所であることには変わらないだろう。</p>
+<img src="se.png" alt="風景1" class="right-img">
+
+
+<h2 id="section4">適した性格</h2>
+<p>あくまで私個人の意見であることご理解いただいたうえでご閲覧下さい。</p>
+<p>勿論、機械について興味関心がある人には最適だと思います。</p>
+<p>その他にも、Mコースは他のコースと比べて、取っ付きやすい印象があります</p>
+<p>Iコースは最もスキルが求められ、弱肉強食を強制されるため、真にプログラミング等に関心を持つ人である必要があります。</p>
+<p>Eコースは小さな基板を精密に扱う必要があり、手先の器用さが求められる印象がある</p>
+<p>Dコースにはアイデア性が求められ、比較的才能の面が強いように感じた</p>
+<p>これらに比べて、Mコースは能力がいらないとまではいわないが、講義内にて完結している印象がある</p>
+<p>そのため、明確な関心や目標が定まっていない学生にも、お勧めできる。</p>
+<p>実際、楽観的な人が多いように感じ、高専の中でも最も普通科高校に雰囲気が似ているのではないだろうか</p>
+
+<h2><strong>最後に</strong></h2>
+<p>このページが入学や選択の手助けになれば幸いです。</p>
+<p>ご閲覧ありがとうございました！</p>
+
+
+<div class="images">
     </div>
-  </div>
-  <div class=footer>
-    ふったー
-  </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 稲葉有煌</p>
+  </footer>
 </body>
 </html>
