--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <p>"自分にわかるのか"と座学には不安がつきものだと思います。</p>
 <p>得手不得手も関与しますが、実際私は製図等は大の苦手でしたね</p>
 
-<img src="pang.png" alt="風景1" class="right-img">
+<img src="pang.png" alt="画像の説明" width="幅" height="高さ">
+   
 <p><strong>ですが</strong>、それらを完璧にマスターする必要があるかと言われると</p>  
 <p>そうではありません。無論、単位のため成績は必要になりますが</p>
 <p>高専卒業後、それらをどこまで使うことになるかが関係してきます</p>
