--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <p>完成時には無類の達成感を感じられます。</p>
 <p>感想に個人差はあれど、これが高専を象徴するものであり、</p>
 <p>Mコース唯一無二の長所であることには変わらないだろう。</p>
-<img src="se.png" alt="風景1" class="right-img">
 
+<img src="se.png" alt="画像の説明" width="幅" height="高さ">
 
 <h2 id="section4">適した性格</h2>
 <p>あくまで私個人の意見であることご理解いただいたうえでご閲覧下さい。</p>
